@@ -1,3 +1,5 @@
 ADD_SUBDIRECTORY(tutorial)
 ADD_SUBDIRECTORY(qdbus)
+ADD_SUBDIRECTORY(widgets)
+
 
